[package]
name = "rust_learning_search_with_openrouter"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
anyhow = "1.0"
flate2 = { version = "1.0", features = ["zlib"], default-features = false }
colored = "2.0"
futures-util = "0.3"
